--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>Bootstrap Example</title>
+  <title>About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -22,12 +22,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Logo</a>
+          <a class="navbar-brand" href="index">OpenPen</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li id="home"><a href="index.html">Home</a></li>
-            <li id="about" class = "active"><a href="about.html">About</a></li>
+            <li id="home"><a href="index">Home</a></li>
+            <li id="about" class = "active"><a href="about">About</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#" id = "mylogin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -35,5 +35,14 @@
         </div>
       </div>
     </nav>
+    <p id = "about-section"> 
+    OpenPen is a website created by UC Berkeley CS Student Michael Wang
+    </p>
+
+    <ul>
+        <li>Implemented HTML, CSS w/ Bootstrap, Javascript, and EJS to create a friendly front-end interface for users to chat and check past messages</li>
+        <li>Utilized Node.JS w/ Express to set up the routing along with MongoDB and Mongoose to create the database for the chat history</li>
+        <li>Used Git for version control and deployed the web application via Heroku </li>
+      </ul>
   </body>
 </html>
