--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand" href="index">OpenPen</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active" id="home"><a href="index.html">Home</a></li>
-          <li><a href="about.html" onclick="" id="about">About</a></li>
+          <li class="active" id="home"><a href="index">Home</a></li>
+          <li><a href="about" onclick="" id="about">About</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#" id = "mylogin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
