--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,9 +28,7 @@
         <ul class="nav navbar-nav">
           <li class="active" id="home"><a href="index">Home</a></li>
           <li><a href="about" onclick="" id="about">About</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" id = "mylogin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li><a href="summarize" onclick="" id="about">Summarize</a></li>
         </ul>
       </div>
     </div>
