Added error page, fixed bugs

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -40,6 +40,7 @@
     <ul>
         <li>Implemented HTML, CSS w/ Bootstrap, Javascript, and EJS to create a friendly front-end interface for users to chat and check past messages</li>
         <li>Utilized Node.JS w/ Express to set up the routing along with MongoDB and Mongoose to create the database for the chat history</li>
+        <li>Implemented the Aylien Text Analysis API to allow users to access summaries of longer messages </li>
         <li>Used Git for version control and deployed the web application via Heroku </li>
       </ul>
   </body>
