--- a/views/about.ejs
+++ b/views/about.ejs
@@ -37,10 +37,13 @@
     OpenPen is a website created by UC Berkeley CS Student Michael Wang
     </p>
 
+    <img style = "margin-left: 2%" src="img/profile.JPG" alt="profile pic" height="250" width="250">
+
+
     <ul>
         <li>Implemented HTML, CSS w/ Bootstrap, Javascript, and EJS to create a friendly front-end interface for users to chat and check past messages</li>
         <li>Utilized Node.JS w/ Express to set up the routing along with MongoDB and Mongoose to create the database for the chat history</li>
-        <li>Implemented the Aylien Text Analysis API to allow users to access summaries of longer messages </li>
+        <li>Implemented the Aylien Text Analysis API to analyze the main idea of a message, provide summaries of longer messages, and filter out negative language </li>
         <li>Used Git for version control and deployed the web application via Heroku </li>
       </ul>
   </body>
