--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,12 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index">OpenPen</a>
+        <a class="navbar-brand inactiveLink" href="index">OpenPen</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active" id="home"><a href="index">Home</a></li>
-          <li><a href="summarize" onclick="" id="about">Summarize</a></li>
+          <li><a href="index" class="active" onclick="" id="home">Home</a></li>
+          <li><a href="summarize" onclick="" id="summarize">Summarize</a></li>
           <li><a href="about" onclick="" id="about">About</a></li>
         </ul>
       </div>
