--- a/views/summarize.ejs
+++ b/views/summarize.ejs
@@ -5,15 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
   <body>
 
-    <div id="nav-placeholder">
-    </div>
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -22,12 +20,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index">OpenPen</a>
+          <a class="navbar-brand inactiveLink" href="index">OpenPen</a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li id="home"><a href="index">Home</a></li>
-            <li class="active" ><a href="summarize" onclick="">Summarize</a></li>
+            <li><a href="index" id="home">Home</a></li>
+            <li><a href="summarize" class="active" id = "summarize">Summarize</a></li>
             <li id="about"><a href="about">About</a></li>
           </ul>
         </div>
@@ -35,21 +33,34 @@
     </nav>
 
     <div class="modal-body-row">
-        <h5 style="margin-left: 5%"> This page is helpful for summarizing long texts </h5>
-        <form method = "post" action="/summarizeText" >
-        <div class="col-md-6">
+      <div class="col-md-6">
+        <div class="container-fluid text-center">
+          <div class="row content">
+            <div class="col-sm-8 text-left">
+              <h5 style="margin-left: 5%"> This page is helpful for summarizing long texts </h5>
+              <form method = "post" action="/summarizeText" >
                 <textarea type="text" name="text" style="height:100px; margin-left:5%; width: 500px; display:block;" placeholder="Your story you want summarized"></textarea>
                 <input type="submit" class="btn btn-primary" style="margin-top:3%; margin-left:5%" >
+            </div>
+          </div>
         </div>
-        <div class="col-md-6">
+      </div>
+      <div class="col-md-6">
+        <div class="container-fluid text-center">
+          <div class="row content">
+            <div class="col-sm-8 text-left">
                 <% newEntries.forEach(function(item){ %>
                     <div >
                     <p><b>Original</b>: <%=item.original%></p>
                     <p><b>Summarized:</b> <%=item.new%></p>
                     </div>
                   <% }) %>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
 
-        </form>
+    
   </body>
 </html>
