--- a/views/summarize.ejs
+++ b/views/summarize.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <title>About</title>
+  <title>Summarize</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -39,8 +39,13 @@
             <div class="col-sm-8 text-left">
               <h5 style="margin-left: 5%"> This page is helpful for summarizing long texts </h5>
               <form method = "post" action="/summarizeText" >
-                <textarea type="text" name="text" style="height:100px; margin-left:5%; width: 500px; display:block;" placeholder="Your story you want summarized"></textarea>
-                <input type="submit" class="btn btn-primary" style="margin-top:3%; margin-left:5%" >
+                <div class="form-group">
+                  <textarea name="text" class="form-control" placeholder="The story you want summarized" style="width: 100%; height: 150px;"></textarea>
+                </div>
+                <div class="form-group">
+                  <input type="submit" class="btn btn-primary" style="margin-top:3%; margin-left:5%" >
+                </div>
+              </form>
             </div>
           </div>
         </div>
