--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,9 @@
 .navbar {
   margin-bottom: 0;
   border-radius: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
 }
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
