--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="box">
         <h1>Oops</h1>
-        <p>Your message "<%= message %>" was flagged as negative</p>
+        <p>Your message was flagged as negative</p>
         <p><a href="/">Write something more positive!</a></p>
     </div>
 </div>
