--- a/views/summarize.ejs
+++ b/views/summarize.ejs
@@ -26,7 +26,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index" id="home">Home</a></li>
             <li><a href="summarize" class="active" id = "summarize">Summarize</a></li>
-            <li id="about"><a href="about">About</a></li>
+            <li><a href="about"  id="about">About</a></li>
           </ul>
         </div>
       </div>
